kubernetes-networks/dashboard/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
    - name: dashboard-svc
      protocol: TCP
      port: 443
      targetPort: https
